# qr-review-generator

./: .gitignore  Dockerfile  README.md  app.py  firebase.json  pyproject.toml  requirements.txt
.firebase/: hosting.cHVibGlj.cache
public/: admin.html  admin_panel.html  index.html  login.html  recharge.html
templates/: admin.html  admin_panel.html  index.html  login.html  recharge.html
